--- a/bibdatabase.bib
+++ b/bibdatabase.bib
@@ -364,3 +364,39 @@ eprint = {arXiv:1005.5718 [physics.soc-ph]}
   year={2001},
   publisher={Mit Press}
 }
+
+@book{Salinas1997,
+  title={Introdu{\c{c}}{\~a}o a F{\'\i}sica Estat{\'\i}stica},
+  author={Salinas, S.R.},
+  isbn={9788531403866},
+  url={http://books.google.com.br/books?id=cAlP3sc0K44C},
+  year={1997},
+  publisher={EDUSP}
+}
+
+
+@article{Erdos1960,
+    author = {{Erd\"{o}s}, P. and {R\'{e}nyi}, A.},
+    journal = {Publ. Math. Inst. Hung. Acad. Sci},
+    pages = {17--61},
+    priority = {1},
+    title = {{On the evolution of random graphs}},
+    volume = {5},
+    year = {1960}
+}
+
+
+@article{Newman2001,
+  title = {Random graphs with arbitrary degree distributions and their applications},
+  author = {Newman, M. E. J. and Strogatz, S. H. and Watts, D. J.},
+  journal = {Phys. Rev. E},
+  volume = {64},
+  issue = {2},
+  pages = {026118},
+  numpages = {17},
+  year = {2001},
+  month = {Jul},
+  doi = {10.1103/PhysRevE.64.026118},
+  url = {http://link.aps.org/doi/10.1103/PhysRevE.64.026118},
+  publisher = {American Physical Society}
+}
