--- a/main.tex
+++ b/main.tex
@@ -31,4 +31,6 @@
   \appendix
 % 	  \include{./tex/apendices/glossario}
 	  \include{./tex/apendices/provas}
+	  \include{./tex/apendices/erdosrenyi}
+
 \end{document}
