--- a/tex/copulas.tex
+++ b/tex/copulas.tex
@@ -47,7 +47,7 @@ com $g(\cdot)$ monotônica, a princípio contém exatamente a mesma informação
 \item \label{item:invariante} o funcional seja invariante por escolhas de novas variáveis $(X, Y) \rightarrow (U = u(X), V = v(Y))$ desde que nenhuma informação seja perdida, ou seja, desde que  $u(\cdot)$ e $v(\cdot)$ sejam funções bijetoras;
 \item \label{item:normal} o funcional seja uma função monotônica e crescente do módulo da correlação linear para o caso de distribuições conjuntas gaussianas.	
 \end{enumerate}
-Essa série de requisitos, essencialmente\footnote{Renyi exigia ainda que a medida tomasse valores no conjunto $[0,1]$, o que dispensamos, uma vez que é sempre possível transpor uma medida no intervalo $[0,\infty]$ para esse conjunto através de uma função monotônica. Além disso há requisitos de continuidade e convergência para sequências convergentes de distribuições.} enumerados pela primeira vez \cite{Renyi1959, schweizer1981} por \citet{Renyi1959} , não são suficientes para escolher um parâmetro único e são satisfeitos por uma grande variedade de diferentes parâmetros usados em estatística. Como exemplo podemos citar o $\tau$ de Kendall. Dados dois pares, $(X_1, Y_1)$ e $(X_2,Y_2)$, de pontos sorteados independentemente da distribuição $p_{XY}(x,y)$, o $\tau$ de Kendall é dado por:
+Essa série de requisitos, essencialmente\footnote{Rényi exigia ainda que a medida tomasse valores no conjunto $[0,1]$, o que dispensamos, uma vez que é sempre possível transpor uma medida no intervalo $[0,\infty]$ para esse conjunto através de uma função monotônica. Além disso há requisitos de continuidade e convergência para sequências convergentes de distribuições.} enumerados pela primeira vez \cite{Renyi1959, schweizer1981} por \citet{Renyi1959} , não são suficientes para escolher um parâmetro único e são satisfeitos por uma grande variedade de diferentes parâmetros usados em estatística. Como exemplo podemos citar o $\tau$ de Kendall. Dados dois pares, $(X_1, Y_1)$ e $(X_2,Y_2)$, de pontos sorteados independentemente da distribuição $p_{XY}(x,y)$, o $\tau$ de Kendall é dado por:
 \begin{align*}
  \tau_{XY} &= \Prob{(X1-X2)(Y1 - Y2) > 0} - \Prob{(X1-X2)(Y1 - Y2) < 0} \\
       &= 4 \int F(x,y) dF(x,y) - 1  , 
@@ -180,7 +180,7 @@ Inserindo marginais F(x) e G(y) quaisquer, nota-se o tipo de distribuições con
 
 \subsection{Medidas de dependência revisitadas}
 
-\newthought{Os ``axiomas'' de Renyi} a respeito de medidas de dependência podem ser revisitados e tornados mais precisos com o conceito de cópula e cópulas extremas em mãos. Os itens \ref{item:funcional}, \ref{item:simétrico} e \ref{item:invariante} ficam imediatamente satisfeitos se a medida de dependência em questão for funcional apenas da cópula e não das distribuições marginais. Além disso, os itens \ref{item:indep} e \ref{item:maximo} podem ser reescritos em termos das cópulas extremas e da cópula independente. Podemos reescrever então esses requisitos da seguinte forma:
+\newthought{Os ``axiomas'' de Rényi} a respeito de medidas de dependência podem ser revisitados e tornados mais precisos com o conceito de cópula e cópulas extremas em mãos. Os itens \ref{item:funcional}, \ref{item:simétrico} e \ref{item:invariante} ficam imediatamente satisfeitos se a medida de dependência em questão for funcional apenas da cópula e não das distribuições marginais. Além disso, os itens \ref{item:indep} e \ref{item:maximo} podem ser reescritos em termos das cópulas extremas e da cópula independente. Podemos reescrever então esses requisitos da seguinte forma:
 \begin{itemize}
 \item Uma boa medida de dependência entre duas variáveis $X$ e $Y$ é um funcional $\mathcal{F} : C_{2} \to \mathcal{R}$ que leva funções cópula $C_{XY}(\cdot, \cdot)$ em números reais e independe das distribuições marginais;
 \item atinge um valor mínimo, que será arbitráriamente escolhido como zero, se, e somente se, $C_{XY}(u,v) = uv$;
